; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslerror.c_AslIsExceptionDisabled.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslerror.c_AslIsExceptionDisabled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AslGbl_WarningLevel = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@AslGbl_DisabledMessagesIndex = common dso_local global i64 0, align 8
@AslGbl_DisabledMessages = common dso_local global i64* null, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @AslIsExceptionDisabled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AslIsExceptionDisabled(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  switch i32 %8, label %38 [
    i32 129, label %9
    i32 128, label %9
    i32 130, label %16
    i32 131, label %16
    i32 132, label %16
  ]

9:                                                ; preds = %2, %2
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @AslGbl_WarningLevel, align 4
  %12 = icmp sgt i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32, i32* @TRUE, align 4
  store i32 %14, i32* %3, align 4
  br label %41

15:                                               ; preds = %9
  br label %16

16:                                               ; preds = %2, %2, %2, %15
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i64 @AeBuildFullExceptionCode(i32 %17, i32 %18)
  store i64 %19, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %20

20:                                               ; preds = %34, %16
  %21 = load i64, i64* %7, align 8
  %22 = load i64, i64* @AslGbl_DisabledMessagesIndex, align 8
  %23 = icmp ult i64 %21, %22
  br i1 %23, label %24, label %37

24:                                               ; preds = %20
  %25 = load i64, i64* %6, align 8
  %26 = load i64*, i64** @AslGbl_DisabledMessages, align 8
  %27 = load i64, i64* %7, align 8
  %28 = getelementptr inbounds i64, i64* %26, i64 %27
  %29 = load i64, i64* %28, align 8
  %30 = icmp eq i64 %25, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %24
  %32 = load i32, i32* @TRUE, align 4
  store i32 %32, i32* %3, align 4
  br label %41

33:                                               ; preds = %24
  br label %34

34:                                               ; preds = %33
  %35 = load i64, i64* %7, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* %7, align 8
  br label %20

37:                                               ; preds = %20
  br label %39

38:                                               ; preds = %2
  br label %39

39:                                               ; preds = %38, %37
  %40 = load i32, i32* @FALSE, align 4
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %39, %31, %13
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i64 @AeBuildFullExceptionCode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
